Fix top margin spacing content from navigation

--- a/baseball.html
+++ b/baseball.html
@@ -34,7 +34,7 @@ slides:
     text2: Ipsum Lorem
 ---
 
-<div class="container slider-container">
+<div class="container slider-container sub-nav-marg">
   <a href="http://www.njcaa.org/landing/index" class="njcaa-link" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" class="njcaa-logo" alt="NJCAA logo, link to region 4 standings" /></a>
   <div class="row slider-row">
     <div class="col-md-12 baseballSlider">
