--- a/baseball/schedule/index.html
+++ b/baseball/schedule/index.html
@@ -3,6 +3,7 @@ layout: schedule-page
 baseurl: ../../
 title: Baseball Schedule
 sport: 2
+base: baseball
 ---
 <!-- Schedule page content -->
 {% include schedule-table.html %}
