--- a/facilities.html
+++ b/facilities.html
@@ -1,33 +1,64 @@
 ---
-layout: sub-nav-landing
+layout: landing
 baseurl: ../
 title: Facilities
+base: facilities
 ---
-{% include facil-banner.html %}
+
+<!-- Facilities-specific sub-nav -->
+<div class="container-fluid sub-nav">
+  <div class="row filler">&#160;</div>
+  <div class="row sub-nav-row mx-auto">
+    <div class="col-md-6 text-center">
+      <h1 class="page-heading">{{ page.base }}</h1>
+    </div>
+    <div class="col-md-6">
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a href="{{page.baseurl}}/{{page.base}}/sports-facilities" class="nav-link sub-nav-link">Sports Facilities</a>
+        </li>
+        <li class="nav-item">
+          <a href="{{page.baseurl}}/{{page.base}}/fitness-center" class="nav-link sub-nav-link">Fitness Center</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<section class="hero-section sub-nav-marg">
+  <div class="container hero-container">
+    <div class="row hero-row">
+      <div class="col-md-12">
+        <img src="{{page.baseurl}}uploads/facilities-banner.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center">
+      </div>
+    </div>
+  </div>
+</section>
+
 <main class="facilities-container">
   <div class="container">
     <div class="row">
       <div class="col-md-4 img-wrapper">
-        <a class="img-link" href="{{site.baseurl}}/sports-facilities">
+        <a class="img-link" href="{{site.baseurl}}/facilities/sports-facilities">
           <div class="thumb-caption">
             Sports Facilities
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/sport-facilities-thumb.jpg" alt="Photo of Erin Gaston pitching at a game on the KCC Softball Field">
+          <img class="img-fluid img-ease editable" src="{{page.baseurl}}uploads/sport-facilities-thumb.jpg" alt="Photo of Erin Gaston pitching at a game on the KCC Softball Field">
         </a>
       </div>
       <div class="col-md-8 vert-mid">
         <p class="editable">Simple introduction paragraph about the sports facilities, that will lead into the individual links below. Simple introduction paragraph about the sports facilities, that will lead into the individual links below.</p>
-        <a href="{{site.baseurl}}/sports-facilities#gym" class="blue-link">George S. Ryan Gymnasium</a><br>
-        <a href="{{site.baseurl}}/sports-facilities#baseball-field" class="blue-link">Baseball Field</a><br>
-        <a href="{{site.baseurl}}/sports-facilities#softball-field" class="blue-link">Softball Field</a><br>
-        <a href="{{site.baseurl}}/sports-facilities#soccer-field" class="blue-link">Softball Field</a><br>
+        <a href="{{site.baseurl}}/facilities/sports-facilities#gym" class="blue-link">George S. Ryan Gymnasium</a><br>
+        <a href="{{site.baseurl}}/facilities/sports-facilities#baseball-field" class="blue-link">Baseball Field</a><br>
+        <a href="{{site.baseurl}}/facilities/sports-facilities#softball-field" class="blue-link">Softball Field</a><br>
+        <a href="{{site.baseurl}}/facilities/sports-facilities#soccer-field" class="blue-link">Softball Field</a><br>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4 img-wrapper">
-        <a class="img-link" href="{{site.baseurl}}/fitness-center">
+        <a class="img-link" href="{{site.baseurl}}/facilities/fitness-center">
           <div class="thumb-caption">
             Fitness Center
           </div>
@@ -38,9 +69,9 @@ title: Facilities
       </div>
       <div class="col-md-8 vert-mid">
         <p class="editable">Simple introduction paragraph about the fitness center, that will lead into the individual links below. Simple introduction paragraph about the fitness center, that will lead into the individual links below.</p>
-        <a href="{{site.baseurl}}/fitness-center#personal-trainers" class="blue-link">Personal Trainers</a><br>
-        <a href="{{site.baseurl}}/fitness-center#membership" class="blue-link">Membership</a><br>
-        <a href="{{site.baseurl}}/fitness-center#testimonials" class="blue-link">Testimonials</a><br>
+        <a href="{{site.baseurl}}/facilities/fitness-center#personal-trainers" class="blue-link">Personal Trainers</a><br>
+        <a href="{{site.baseurl}}/facilities/fitness-center#membership" class="blue-link">Membership</a><br>
+        <a href="{{site.baseurl}}/facilities/fitness-center#testimonials" class="blue-link">Testimonials</a><br>
       </div>
     </div>
   </div>
