--- a/about/equity/index.html
+++ b/about/equity/index.html
@@ -6,7 +6,7 @@ title: Equity in Athletics
 ---
 
 {% include about-nav.html %}
-<main class="about-main">
+<main class="about-main sub-nav-marg">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
