Move sport-facilities into facilities/ dir...
for pretty permalink nav

--- a/facilities/sports-facilities/index.html
+++ b/facilities/sports-facilities/index.html
@@ -9,18 +9,21 @@ title: Sports Facilities
   <div class="row filler">&#160;</div>
   <div class="row sub-nav-row mx-auto">
     <div class="col-md-6 text-center">
-      <h1 class="page-heading">{{ page.base }}</h1>
+      <h1 class="page-heading">Sports Facilities</h1>
     </div>
     <div class="col-md-6">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/student-athletes" class="nav-link sub-nav-link">Membership</a>
+          <a href="{{page.baseurl}}/{{page.base}}/sports-facilities#gym" class="nav-link sub-nav-link">Activities Center</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/equity" class="nav-link sub-nav-link">Personal Trainers</a>
+          <a href="{{page.baseurl}}/{{page.base}}/sports-facilities#baseball-field" class="nav-link sub-nav-link">Baseball Field</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/staff" class="nav-link sub-nav-link">Testimonials</a>
+          <a href="{{page.baseurl}}/{{page.base}}/sports-facilities#softball-field" class="nav-link sub-nav-link">Softball Fied</a>
+        </li>
+        <li class="nav-item">
+          <a href="{{page.baseurl}}/{{page.base}}/sports-facilities#soccer-field" class="nav-link sub-nav-link">Soccer Fied</a>
         </li>
       </ul>
     </div>
