Adjust content's top margin

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -9,18 +9,18 @@ title: Fitness Center
   <div class="row filler">&#160;</div>
   <div class="row sub-nav-row mx-auto">
     <div class="col-md-6 text-center">
-      <h1 class="page-heading">{{ page.base }}</h1>
+      <h1 class="page-heading">Fitness Center</h1>
     </div>
     <div class="col-md-6">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/student-athletes" class="nav-link sub-nav-link">Membership</a>
+          <a href="{{page.baseurl}}/{{page.base}}/fitness-center#membership" class="nav-link sub-nav-link">Membership</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/equity" class="nav-link sub-nav-link">Personal Trainers</a>
+          <a href="{{page.baseurl}}/{{page.base}}/fitness-center#personal-trainers" class="nav-link sub-nav-link">Personal Trainers</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/staff" class="nav-link sub-nav-link">Testimonials</a>
+          <a href="{{page.baseurl}}/{{page.base}}/fitness-center#testimonials" class="nav-link sub-nav-link">Testimonials</a>
         </li>
       </ul>
     </div>
