--- a/baseball.html
+++ b/baseball.html
@@ -31,7 +31,7 @@ slides:
     alt-text:
     url: 'http://www.kcc.edu'
     text1: Apply here
-    text2: Ipsum Lorem
+    text2: Ipsum Lorem.
 ---
 
 <div class="container slider-container sub-nav-marg">
