--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ slides:
     alt-text:
     url: 'http://www.kcc.edu'
     text1: Apply here
-    text2: Ipsum Lorem
+    text2: Ipsum Lorem.
   - image: uploads/basketball-slide-4_DSC_3172.jpg
     alt-text:
     url: 'http://www.kcc.edu'
