--- a/index.html
+++ b/index.html
@@ -69,11 +69,14 @@ slides:
       <div class="col-md-8 news-feed">
         <h2 class="main-heading grey-bg"><img src="assets/img/news.svg" class="icon-middle" alt="News icon">&#160;News</h2>
         <div class="news-scroll">
-            {% for item in site.news %}
-            <h2>{{ item.title }}</h2>
-            <p>{{ item.description }}</p>
-            <p><a href="{{ item.url }}">{{ item.title }}</a></p>
+          <ul>
+            {% for post in site.posts %}
+            <li>
+              <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+              <p>{{ post.description }}</p>
+            </li>
             {% endfor %}
+          </ul>
         </div>
       </div>
       <div class="col-md-4">
