Add "View Bio" button to all coaches. Update all...
"More YouTube Videos" button links to go to KCC YouTube page

--- a/soccer.html
+++ b/soccer.html
@@ -78,7 +78,7 @@ slides:
           <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon">&#160;Videos</h2>
         	<div id="yt_list" class="yt_list">
         	</div>
-        		<a class="btn btn-primary yt-button" href="http://youtube.com">More Athletics Videos</a>
+        		<a class="btn btn-primary yt-button" href="https://www.youtube.com/user/KankakeeCommCollege">More Athletics Videos</a>
         	</div>
 
         <!-- YouTube Modal -->
@@ -117,6 +117,7 @@ slides:
             <h6 class="coach-title">Head Coach</h6></a>
             <p>815&#8209;802&#8209;8618<br>
             mbarclay@kcc.edu</p>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach1">View Bio</a>
           </div>
         </div>
       </div>
@@ -126,6 +127,7 @@ slides:
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">John Hall</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
         </div>
       </div>
@@ -135,6 +137,7 @@ slides:
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name">Keion Joseph "Cruz"</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach3">View Bio</a>
           </div>
         </div>
       </div>
@@ -146,6 +149,7 @@ slides:
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach4" class="modal-link"><h5 class="coach-name">James Ashby</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach4">View Bio</a>
           </div>
         </div>
       </div>
