--- a/baseball.html
+++ b/baseball.html
@@ -83,7 +83,7 @@ slides:
           <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon" />&#160;Videos</h2>
         	<div id="yt_list" class="yt_list">
         	</div>
-        		<a class="btn btn-primary yt-button" href="http://youtube.com">More Athletics Videos</a>
+        		<a class="btn btn-primary yt-button" href="https://www.youtube.com/user/KankakeeCommCollege">More Athletics Videos</a>
         	</div>
 
         <!-- Modal -->
@@ -121,8 +121,10 @@ slides:
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Todd Post</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
             <p class="editable">
-                815‑802‑8616<br />tpost@kcc.edu
+                815‑802‑8616<br />
+                tpost@kcc.edu
             </p>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach1">View Bio</a>
           </div>
         </div>
       </div>
@@ -132,8 +134,11 @@ slides:
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Bryce Shafer</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
-            <p>815&#8209;802&#8209;8609<br />
-            bshafer@kcc.edu</p>
+            <p class="editable">
+              815&#8209;802&#8209;8609<br />
+              bshafer@kcc.edu
+            </p>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
         </div>
       </div>
