--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -78,7 +78,7 @@ slides:
           <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon">&#160;Videos</h2>
         	<div id="yt_list" class="yt_list">
         	</div>
-        		<a class="btn btn-primary yt-button" href="http://youtube.com">More Athletics Videos</a>
+        		<a class="btn btn-primary yt-button" href="https://www.youtube.com/user/KankakeeCommCollege">More Athletics Videos</a>
         	</div>
 
         <!-- Modal -->
@@ -117,6 +117,7 @@ slides:
             <h6 class="coach-title">Head Coach</h6></a>
             <p>815&#8209;802&#8209;8609<br>
             athorson@kcc.edu</p>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach1">View Bio</a>
           </div>
         </div>
       </div>
@@ -134,7 +135,6 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/chris-gardner.jpg" alt="Photo of Head Coach Chris Gardner" class="img-fluid float-left coach-modal-img">
         <h5 class="coach-name editable">Alex Thorson</h5>
         <h6 class="coach-title editable">Head Coach</h6>
         <p>815&#8209;802&#8209;8609<br>
