--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@ slides:
   <div class="row slider-row">
     <div class="col-md-12 baseballSlider">
     {% for slide in page.slides %}
+      {% if forloop.first == true %}
+      <div>
+        <img src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="{{slide.alt-text}}">
+        <div class="heading-container">
+          <h3 class="sub-heading">{{slide.text1}}</h3>
+          <h3 class="slide-heading">{{slide.text2}}</h3>
+        </div>
+      </div>
+      {% else %}
       <div>
         <img src="assets/img/placeholder.png" data-src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="{{slide.alt-text}}">
         <div class="heading-container">
@@ -52,7 +61,8 @@ slides:
           <h3 class="slide-heading">{{slide.text2}}</h3>
         </div>
       </div>
-     {% endfor %}
+      {% endif %}
+    {% endfor %}
     </div>
   </div>
 </div>
