Fix news post rollup's if statement to pull general news
"or" in if statement adds the general news category

--- a/baseball.html
+++ b/baseball.html
@@ -74,7 +74,7 @@ slides:
           <div class="news-scroll">
             <ul>
               {% for post in site.posts %}
-              {% if post.categories contains 'baseball' or post.categories == "news" %}
+              {% if post.categories contains 'baseball' or post.categories contains 'general' %}
               <li class="no-bullet">
                 <a href="{{ post.url }}"><img src="{{ post.news_thumb }}" class="news-thumb" alt=""><h2>&#160;{{ post.title }}<h2></a>
                 <p>{{ post.description }}</p>
