Add and define base: in YAML front matter to pull into...
pages h1 heading in sub-nav

--- a/mens-basketball/roster/index.html
+++ b/mens-basketball/roster/index.html
@@ -2,6 +2,7 @@
 layout: sub-nav
 baseurl: ../../
 title: "Men's Basketball Roster"
+base: "men's basketball"
 ---
 
 <section id="table-area" class="roster-container">
