--- a/mens-basketball/schedule/index.html
+++ b/mens-basketball/schedule/index.html
@@ -3,6 +3,7 @@ layout: schedule-page
 baseurl: ../../
 title: Men's Basketball Schedule
 sport: 7
+base: men's basketball
 ---
 <!-- Schedule page content -->
 {% include schedule-table.html %}
