--- a/soccer/schedule/index.html
+++ b/soccer/schedule/index.html
@@ -3,6 +3,7 @@ layout: schedule-page
 baseurl: ../../
 title: Soccer Schedule
 sport: 5
+base: soccer
 ---
 <!-- Schedule page content -->
 {% include schedule-table.html %}
