--- a/softball/schedule/index.html
+++ b/softball/schedule/index.html
@@ -3,6 +3,7 @@ layout: schedule-page
 baseurl: ../../
 title: Softball Schedule
 sport: 3
+base: softball
 ---
 <!-- Schedule page content -->
 {% include schedule-table.html %}
