--- a/volleyball/roster/index.html
+++ b/volleyball/roster/index.html
@@ -2,6 +2,7 @@
 layout: sub-nav
 baseurl: ../../
 title: Volleyball Roster
+base: volleyball
 ---
 
 <section id="table-area" class="roster-container">
