--- a/volleyball/schedule/index.html
+++ b/volleyball/schedule/index.html
@@ -3,6 +3,7 @@ layout: schedule-page
 baseurl: ../../
 title: Volleyball Schedule
 sport: 4
+base: volleyball
 ---
 <!-- Schedule page content -->
 {% include schedule-table.html %}
