--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ slides:
       </div>
     </div>
     <div class="row news-social-row">
-      <div class="col-md-8 news-feed">
+      <div class="col-md-8 col-xs-12 news-feed">
         <h2 class="main-heading grey-bg"><img src="assets/img/news.svg" class="icon-middle" alt="News icon">&#160;News</h2>
         <div class="news-scroll">
           <ul>
@@ -88,7 +88,7 @@ slides:
           </ul>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-xs-12">
         <h2 class="main-heading"><img src="assets/img/social-icon.svg" class="icon-middle" alt="Social media icon">&#160;Social Media</h2>
         <div class="fb-page" data-href="https://www.facebook.com/KankakeeCommunityCollege/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KankakeeCommunityCollege/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KankakeeCommunityCollege/">Kankakee Community College</a></blockquote></div>
       </div>
