--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ slides:
           </ul>
         </div>
       </div>
-      <div class="col-md-4 col-xs-12">
-        <h2 class="main-heading"><img src="assets/img/social-icon.svg" class="icon-middle" alt="Social media icon">&#160;Social Media</h2>
+      <div class="col-md-4 col-xs-12 text-sm-center social-marg">
+        <h2 class="main-heading text-sm-left"><img src="assets/img/social-icon.svg" class="icon-middle" alt="Social media icon">&#160;Social Media</h2>
         <div class="fb-page" data-href="https://www.facebook.com/KankakeeCommunityCollege/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KankakeeCommunityCollege/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KankakeeCommunityCollege/">Kankakee Community College</a></blockquote></div>
       </div>
     </div>
