--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ slides:
   - image: uploads/header-bg.jpg
     alt-text:
     url: 'http://www.kcc.edu'
-    text1: Apply here
+    text1: Ipsum Lorem
     text2: Ipsum Lorem
   - image: uploads/header-bg3.jpg
     alt-text:
