Add real headings to slick slides->remove ipsum text.

--- a/index.html
+++ b/index.html
@@ -8,37 +8,32 @@ slides:
     alt-text: Baseball Championship
     url: 'http://www.kcc.edu'
     text1: Baseball Championship 2017
-    text2: 2017 NJCAA DIVISION II NATIONAL CHAMPIONS
+    text2: 2017 NJCAA DIVISION II NATIONAL&#160;CHAMPIONS
   - image: uploads/header-bg.jpg
     alt-text:
     url: 'http://www.kcc.edu'
-    text1: Apply here
-    text2: Ipsum Lorem
+    text1: Women's Basketball
+    text2: KCC Women's Basketball <br>vs Joliet Junior College
   - image: uploads/header-bg3.jpg
     alt-text:
     url: 'http://www.kcc.edu'
-    text1: Apply here
-    text2: Ipsum Lorem
+    text1: Soccer
+    text2: KCC Cavaliers Soccer <br>vs Joliet Junior College
   - image: uploads/softball-slide-5_D51_3077.jpg
     alt-text:
     url: 'http://www.kcc.edu'
-    text1: Apply here
-    text2: Ipsum Lorem
-  - image: uploads/wbasketball-slide-2_D51_0015.jpg
-    alt-text:
-    url: 'http://www.kcc.edu'
-    text1: Apply here
-    text2: Ipsum Lorem
+    text1: Softball
+    text2: KCC Softball 2018 team <br>Lindsey Andrews &#35;11
   - image: uploads/volleyball-slide-3_D4S_6473.jpg
     alt-text:
     url: 'http://www.kcc.edu'
-    text1: Apply here
-    text2: Ipsum Lorem.
+    text1: Volleyball
+    text2: KCC Volleyball vs <br>Olivet Nazarene
   - image: uploads/basketball-slide-4_DSC_3172.jpg
     alt-text:
     url: 'http://www.kcc.edu'
-    text1: Apply here
-    text2: Ipsum Lorem
+    text1: Men's Basketball
+    text2: Men's Basketball <br>vs Kennedy-King
 ---
 
 <div class="container slider-container nav-marg">
