--- a/baseball.html
+++ b/baseball.html
@@ -11,7 +11,7 @@ slides:
       II National Championship victory.
     url: 'http://www.kcc.edu'
     text1: 'June 6, 2017 | Baseball'
-    text2: 2017 NJCAA DIVISION II NATIONAL CHAMPIONS
+    text2: 2017 NJCAA DIVISION II <br>NATIONAL CHAMPIONS
   - image: uploads/baseball-hero2.jpg
     alt-text:
     url: 'http://www.kcc.edu'
