--- a/recruitment.html
+++ b/recruitment.html
@@ -5,7 +5,7 @@ title: Recruitment
 ---
 <!-- Recruitment Content -->
 <section class="recruit-section">
-  <div class="container">
+  <div class="container editable">
     <div class="row row-space">
       <div class="col-md-4"><h2>Baseball</h2></div>
         <div class="col-md-8"><a href="https://form.jotform.com/72396568714974" class="btn btn-primary btn-marg-left">Recruitment form</a></div>
