Updated 'recruitment.html' via CloudCannon

--- a/recruitment.html
+++ b/recruitment.html
@@ -7,7 +7,7 @@ title: Recruitment
 <section class="recruit-section">
   <div class="container editable">
     <div class="row row-space">
-        <div class="col-md-12 ediatble"></div>
+        <div class="col-md-12 editable"></div>
     </div>
     <div class="row row-space">
       <div class="col-md-4"><h2>Baseball</h2></div>
