Fix all broken links to sports landing pages

--- a/sports.html
+++ b/sports.html
@@ -29,7 +29,7 @@ baseball_image: uploads/baseball-thumb.jpg
         </div>
       </div>
       <div class="col-md-4 col-sm-6 img-wrapper">
-        <a class="img-link" href="http://athletics.kcc.edu/mbasketball">
+        <a class="img-link" href="{{site.baseurl}}/mens-basketball">
           <div class="thumb-caption">
             Men's Basketball
           </div>
@@ -49,7 +49,7 @@ baseball_image: uploads/baseball-thumb.jpg
         </div>
       </div>
       <div class="col-md-4 col-sm-6 img-wrapper">
-        <a class="img-link" href="http://athletics.kcc.edu/wbasketball">
+        <a class="img-link" href="{{site.baseurl}}/womens-basketball">
           <div class="thumb-caption">
             Women's Basketball
           </div>
@@ -69,7 +69,7 @@ baseball_image: uploads/baseball-thumb.jpg
         </div>
       </div>
       <div class="col-md-4 col-sm-6 img-wrapper">
-        <a class="img-link" href="http://athletics.kcc.edu/soccer">
+        <a class="img-link" href="{{site.baseurl}}/soccer">
           <div class="thumb-caption">
             Soccer
           </div>
@@ -89,7 +89,7 @@ baseball_image: uploads/baseball-thumb.jpg
         </div>
       </div>
       <div class="col-md-4 col-sm-6 img-wrapper">
-        <a class="img-link" href="http://athletics.kcc.edu/softball">
+        <a class="img-link" href="{{site.baseurl}}/softball">
           <div class="thumb-caption">
             Softball
           </div>
@@ -109,7 +109,7 @@ baseball_image: uploads/baseball-thumb.jpg
         </div>
       </div>
       <div class="col-md-4 col-sm-6 img-wrapper">
-        <a class="img-link" href="http://athletics.kcc.edu/volleyball">
+        <a class="img-link" href="{{site.baseurl}}/volleyball">
           <div class="thumb-caption">
             Volleyball
           </div>
