Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ sport: 1
 slides:
   - image: uploads/header-bg2.jpg
     alt-text: Baseball Championship
-    url: 'http://www.kcc.edu'
+    url: 'http://athletics.kcc.edu/baseball'
     text1: Baseball Championship 2017
-    text2: 2017 NJCAA DIVISION II NATIONAL&#160;CHAMPIONS
+    text2: '2017 NJCAA DIVISION II NATIONAL&#160;CHAMPIONS'
   - image: uploads/header-bg.jpg
     alt-text:
     url: 'http://www.kcc.edu'
@@ -23,7 +23,7 @@ slides:
     alt-text:
     url: 'http://www.kcc.edu'
     text1: Softball
-    text2: KCC Softball 2018 team <br>Lindsey Andrews &#35;11
+    text2: 'KCC Softball 2018 team <br>Lindsey Andrews &#35;11'
   - image: uploads/volleyball-slide-3_D4S_6473.jpg
     alt-text:
     url: 'http://www.kcc.edu'
