Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ slides:
   - image: uploads/header-bg2.jpg
     alt-text: Baseball Championship
     url: 'http://athletics.kcc.edu/baseball'
-    text1: Baseball Championship 2017
+    text1: TESTBaseball Championship 2017
     text2: '2017 NJCAA DIVISION II NATIONAL&#160;CHAMPIONS'
   - image: uploads/header-bg.jpg
     alt-text:
