Editable coach images

--- a/soccer.html
+++ b/soccer.html
@@ -124,7 +124,7 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Mike Barclay</h5>
             <h6 class="coach-title">Head Coach</h6></a>
@@ -136,7 +136,7 @@ slides:
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/17-jhall-asst.jpg" alt="Photo of Assistant Coach John Hall" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/17-jhall-asst.jpg" alt="Photo of Assistant Coach John Hall" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">John Hall</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
@@ -146,7 +146,7 @@ slides:
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistant Coach Keion Joseph 'Cruz'" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistant Coach Keion Joseph 'Cruz'" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name">Keion Joseph "Cruz"</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
@@ -178,7 +178,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay." class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay." class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">Mike Barclay</h5>
         <h6 class="coach-title editable">Head Coach</h6>
         <p>815&#8209;802&#8209;8618<br>
@@ -204,7 +204,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/17-jhall-asst.jpg" alt="Photo of Assistan Coach John Hall." class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/17-jhall-asst.jpg" alt="Photo of Assistan Coach John Hall." class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">John Hall</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
@@ -226,7 +226,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistan Coach Keion Joseph 'Cruz'." class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistan Coach Keion Joseph 'Cruz'." class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">Keion Joseph "Cruz"</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
