Add editable class to coach images

--- a/baseball.html
+++ b/baseball.html
@@ -128,7 +128,7 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img modal-link" /></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img modal-link editable" /></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Todd Post</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
@@ -142,7 +142,7 @@ slides:
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img modal-link" /></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img modal-link editable" /></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Bryce Shafer</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
@@ -167,7 +167,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img" />
+        <img src="{{page.baseurl}}uploads/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img editable" />
         <h5 class="coach-name editable">Todd Post</h5>
         <h6 class="coach-title editable">Head Coach</h6>
         <p>815&#8209;802&#8209;8616<br />
@@ -199,7 +199,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Assistant Coach Bryce Shafer" class="img-fluid float-left coach-modal-img" />
+        <img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Assistant Coach Bryce Shafer" class="img-fluid float-left coach-modal-img editable" />
         <h5 class="coach-name editable">Bryce Shafer</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <p>815&#8209;802&#8209;8609<br />
