--- a/softball.html
+++ b/softball.html
@@ -124,7 +124,7 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/18-kcooper-coach.jpg" alt="Photo of Head Coach Keith Cooper" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/18-kcooper-coach.jpg" alt="Photo of Head Coach Keith Cooper" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Keith Cooper</h5>
             <h6 class="coach-title">Head Coach</h6></a>
@@ -175,7 +175,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/18-kcooper-coach.jpg" alt="Photo of Head Coach Keith Cooper" class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/18-kcooper-coach.jpg" alt="Photo of Head Coach Keith Cooper" class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">Keith Cooper</h5>
         <h6 class="coach-title editable">Head Coach</h6>
         <p>815&#8209;802&#8209;8606<br>
