--- a/volleyball.html
+++ b/volleyball.html
@@ -124,7 +124,7 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-syancy-coach.jpg" alt="Photo of Head Coach Stephenee Yancy" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-syancy-coach.jpg" alt="Photo of Head Coach Stephenee Yancy" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Stephenee Yancy</h5>
             <h6 class="coach-title">Head Coach</h6></a>
@@ -136,7 +136,7 @@ slides:
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/17-acampbell-asst.jpg" alt="Photo of Assistant Coach Alexia Campbell" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/17-acampbell-asst.jpg" alt="Photo of Assistant Coach Alexia Campbell" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <h5 class="coach-name">Alexia Campbell</h5>
             <h6 class="coach-title">Assistant Coach</h6>
@@ -156,7 +156,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/17-syancy-coach.jpg" alt="Photo of Head Stephenee Yancy" class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/17-syancy-coach.jpg" alt="Photo of Head Stephenee Yancy" class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">Stephenee Yancy</h5>
         <h6 class="coach-title editable">Head Coach</h6>
         <p>815&#8209;802&#8209;8608<br>
@@ -188,7 +188,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/17-acampbell-asst.jpg" alt="Photo of Assistant Coach Alexia Campbell" class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/17-acampbell-asst.jpg" alt="Photo of Assistant Coach Alexia Campbell" class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">Alexia Campbell</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
