--- a/womens-basketball.html
+++ b/womens-basketball.html
@@ -124,7 +124,7 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/10-ddenson-coach.jpg" alt="Photo of Coach Donnie Denson" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/10-ddenson-coach.jpg" alt="Photo of Coach Donnie Denson" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Donnie Denson</h5>
             <h6 class="coach-title">Head Coach</h6></a>
@@ -136,7 +136,7 @@ slides:
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/10-wshipman-asst.jpg" alt="Photo of Assistant Coach Walt Shipman" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/10-wshipman-asst.jpg" alt="Photo of Assistant Coach Walt Shipman" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Walt Shipman</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
@@ -146,7 +146,7 @@ slides:
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/14-cmeister-asst.jpg" alt="Photo of Assistant Coach Casey Meister" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/14-cmeister-asst.jpg" alt="Photo of Assistant Coach Casey Meister" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Casey Meister</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
@@ -166,7 +166,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/10-ddenson-coach.jpg" alt="Photo of Head Coach Chris Gardner" class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/10-ddenson-coach.jpg" alt="Photo of Head Coach Chris Gardner" class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">Donnie Denson</h5>
         <h6 class="coach-title editable">Head Coach</h6>
         <p>815&#8209;802&#8209;8614<br>
@@ -194,7 +194,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/10-wshipman-asst.jpg" alt="Photo of Assistant Coach Walt Shipman" class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/10-wshipman-asst.jpg" alt="Photo of Assistant Coach Walt Shipman" class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">Walt Shipman</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
@@ -218,7 +218,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/14-cmeister-asst.jpg" alt="Photo of Assistant Coach Casey Meister" class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/14-cmeister-asst.jpg" alt="Photo of Assistant Coach Casey Meister" class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">Casey Meister</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
