--- a/softball.html
+++ b/softball.html
@@ -73,7 +73,7 @@ slides:
             {% for post in site.posts %}
             {% if post.categories contains 'softball' or post.categories contains 'general' %}
             <li class="no-bullet">
-              <a href="{{ post.url }}"><img src="{{ post.news_thumb }}" class="news-thumb" alt=""><h2>&#160;{{ post.title }}<h2></a>
+              <a href="{{ post.url }}"><img src="{{ post.news_thumb_image }}" class="news-thumb" alt=""><h2>&#160;{{ post.title }}<h2></a>
               <p>{{ post.description }}</p>
             </li>
             {% endif %}
